--- a/html/index.html
+++ b/html/index.html
@@ -34,23 +34,25 @@
             <img src="../image/logo.png" alt="logo" width="144" height="75">
             <ul class="main-bar">
                 <li><a href="">About</a></li>
-                <li class="ser">
-                    <a href="">Services
-                        <i class="fa-sharp fa-solid fa-caret-down toggle"></i>
-                    </a>
+                <li>
+                    <span class="menu">
+                        <a href="">Services
+                            <i class="fa-sharp fa-solid fa-caret-down toggle"></i>
+                        </a>
 
-                    <ul class="sub-bar">
-                        <li><a href="">Roofing</a></li>
-                        <li><a href="">Construction</a></li>
-                        <li><a href="">Skylights</a></li>
-                        <li><a href="">Windows & Doors</a></li>
-                        <li><a href="">Siding</a></li>
-                        <li><a href="">Painting</a></li>
-                        <li><a href="">Gutters</a></li>
-                        <li><a href="">Custom Patios</a></li>
-                        <li><a href="">Virtual Design Center</a></li>
-                        <li><a href="">Storm Damage</a></li>
-                    </ul>
+                        <ul class="sub-bar">
+                            <li><a href="">Roofing</a></li>
+                            <li><a href="">Construction</a></li>
+                            <li><a href="">Skylights</a></li>
+                            <li><a href="">Windows & Doors</a></li>
+                            <li><a href="">Siding</a></li>
+                            <li><a href="">Painting</a></li>
+                            <li><a href="">Gutters</a></li>
+                            <li><a href="">Custom Patios</a></li>
+                            <li><a href="">Virtual Design Center</a></li>
+                            <li><a href="">Storm Damage</a></li>
+                        </ul>
+                    </span>
 
                 </li>
                 <li><a href="">Projects</a></li>
